feat: create product service

--- a/src/Northwind.Api/Northwind.Api.csproj
+++ b/src/Northwind.Api/Northwind.Api.csproj
@@ -104,6 +104,12 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Northwind.Service\Northwind.Service.csproj">
+      <Project>{3738bfad-8b22-4435-8041-d0b07b0619af}</Project>
+      <Name>Northwind.Service</Name>
+    </ProjectReference>
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
