--- a/src/Northwind.Api/Web.config
+++ b/src/Northwind.Api/Web.config
@@ -6,6 +6,9 @@
 <configuration>
   <appSettings>
   </appSettings>
+    <connectionStrings>
+	    <add name="Northwind" connectionString="Data Source=.;Initial Catalog=Northwind;User ID=northwind_web;Password=1234" providerName="System.Data.SqlClient" />
+    </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.8" />
     <httpRuntime targetFramework="4.8" />
