--- a/src/Northwind.Api/Northwind.Api.csproj
+++ b/src/Northwind.Api/Northwind.Api.csproj
@@ -115,9 +115,12 @@
     <Compile Include="App_Start\AutofacConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\ProductsController.cs" />
+    <Compile Include="Filters\ErrorHandlerAttribute.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Helpers\APIHelper.cs" />
+    <Compile Include="Models\APIResponseModels.cs" />
     <Compile Include="Models\ProductAPIModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -134,6 +137,10 @@
     <Folder Include="App_Data\" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Northwind.Common\Northwind.Common.csproj">
+      <Project>{CF51AF11-1B55-4DC5-BFFB-F05CE99D27A0}</Project>
+      <Name>Northwind.Common</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Northwind.Repository\Northwind.Repository.csproj">
       <Project>{07A9AE68-3208-463E-A57E-54E542F832B8}</Project>
       <Name>Northwind.Repository</Name>
