--- a/src/Northwind.Api/packages.config
+++ b/src/Northwind.Api/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Autofac" version="6.5.0" targetFramework="net48" />
   <package id="Autofac.WebApi2" version="6.1.1" targetFramework="net48" />
+  <package id="AutoMapper" version="10.1.1" targetFramework="net48" />
   <package id="Microsoft.AspNet.WebApi" version="5.2.7" targetFramework="net48" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.7" targetFramework="net48" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.7" targetFramework="net48" />
