--- a/src/Northwind.Common/Northwind.Common.csproj
+++ b/src/Northwind.Common/Northwind.Common.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Enums\ErrorType.cs" />
     <Compile Include="Helpers\EnumHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utilities\OperationalException.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
