--- a/src/Northwind.Common/Northwind.Common.csproj
+++ b/src/Northwind.Common/Northwind.Common.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Constants\TSqlOperator.cs" />
     <Compile Include="Enums\ErrorType.cs" />
     <Compile Include="Helpers\EnumHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
